fix buttons wrap

--- a/src/element/Hyperlink.scss
+++ b/src/element/Hyperlink.scss
@@ -70,4 +70,8 @@
     width: 2rem;
     height: 2rem;
   }
+
+  &__buttons {
+    flex: 0 0 auto;
+  }
 }
